--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main">
         <div class="center">
-
+            <div class="text">
+                <h1>Blue-beauty</h1>
+                <h1>Luxury</h1>
+                <h1>Hotel</h1>
+            </div>
+            <div id="one" class="imagecontainer">
+                <img src="https://images.unsplash.com/photo-1719496177607-c6f9834ba8e2?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image1">
+            </div>
+            <div class="imagecontainer">
+                <img src="https://images.unsplash.com/photo-1677485063463-afa4f29e0445?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image2">
+            </div>
+            <div class="imagecontainer">
+                <img src="https://images.unsplash.com/photo-1680609989998-6183fcea718b?q=80&w=1101&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image3">
+            </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
